--- a/Dots/app/src/main/res/values/strings.xml
+++ b/Dots/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
 
     <string name="title_activity_high_scores">HighScores</string>
     <string name="high_scores_title">High Scores</string>
+    <string name="title_activity_set_high_score">SetHighScoreActivity</string>
+
+    <string name="set_high_score_message">Pick a username mate</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
