--- a/Dots/app/src/main/res/values/strings.xml
+++ b/Dots/app/src/main/res/values/strings.xml
@@ -20,5 +20,5 @@
 
     <string name="set_high_score_message">Pick a username mate</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_options">OptionsActivity</string>
 </resources>
