--- a/Dots/app/src/main/res/values/strings.xml
+++ b/Dots/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="set_high_score_message">Pick a username mate</string>
 
     <string name="title_activity_options">OptionsActivity</string>
+
+    <string name="game_score">Score</string>
+    <string name="game_moves">Moves</string>
 </resources>
